fixed navbar spacing

--- a/react-app/src/components/Navigation/NavBar.css
+++ b/react-app/src/components/Navigation/NavBar.css
@@ -6,7 +6,7 @@
    display: flex;
    justify-content: space-between;
    padding-right: 10px;
-   height: 50px;
+   height: 44px;
    width: 100%;
    background-color: #121016;
    border-bottom: 1px solid #504e52;
@@ -33,17 +33,17 @@
    padding-left: 10px;
    font-size: 25px;
    font-family: 'Noto Sans';
-   
+
 }
 /* ****************** Navbar Search Input ***************** */
 
 .search-container {
    height: 26px;
    margin-top: 8px;
-   margin-left: 240px;
+   margin-left: 220px;
    position: relative;
-   padding-left: 300px;
 }
+
 .nav-container {
    display: flex;
    width: 100vw;
@@ -55,10 +55,11 @@
    padding-left: 10px;
    align-items: center;
 }
+
 .search-input {
    all: unset;
    height: 26px;
-   width: 400px;
+   width: 730px;
    border-radius: 6px;
    border: 1px solid #504e52;
    background-color: #d1d2d333;
